# visuoTactileHRC

./: .gitignore  .~lock.Instructions to run demos with the real UR3 robot.doc#  .~lock.Instructions to run demos with the simulated UR3 robot.doc#  Instructions to run demos with the real UR3 robot.doc  Instructions to run demos with the simulated UR3 robot and fake sensor inputs.doc  Instructions to run demos with the simulated UR3 robot.doc  README.md  lab_computer_info.txt
multimodal_tactile_custom_msgs/: CMakeLists.txt  package.xml
multimodal_tactile_custom_msgs/msg/: Object.msg  capability.msg  current_action.msg  diagnostics.msg  hand_pos.msg  object_state.msg  robot_move.msg  robot_state.msg  screw_count.msg  skeleton.msg  threeIMUs.msg  user_prediction.msg
multimodal_tactile_robot_pkg/: CMakeLists.txt  multimodal_tactile_robot_control.cpp  package.xml
multimodal_tactile_robot_pkg/include/: joint_positions.h  moveit_robot.cpp  moveit_robot.h
multimodal_tactile_robot_pkg/launch/: hri_static_demo_robot.launch  hri_static_demo_simulation.launch  multimodal_tactile_robot_pkg.launch  multimodal_tactile_robot_pkg_test.launch
multimodal_tactile_robot_pkg/robotiq_gripper_control/: CMakeLists.txt  package.xml
multimodal_tactile_robot_pkg/robotiq_gripper_control/src/: gripper_demo_test.cpp  robotiq_gripper_control.cpp
multimodal_tactile_robot_pkg/src/: joint_positions.h  moveit_robot.cpp  moveit_robot.h  multimodal_tactile_robot_control.cpp
multimodal_tactile_user_pkg/: CMakeLists.txt  package.xml
multimodal_tactile_user_pkg/launch/: sam_nodes.launch  (+1 more)
(+63 files in other folders)
